# ayabe

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
src/plugins/: combine.py  luck.py  online_notice.py  poke.py  report.py  save.py
src/plugins/chatgpt/: __init__.py  config.py
src/plugins/miniflux/: __init__.py  config.py  models.py  utils.py
src/plugins/reminder/: __init__.py
src/plugins/reminder/utils/: DISCLAIMER  funcs.py  money_parser.py  rule_pattern.py  time_parser.py
src/plugins/todo/utils/: __init__.py  extractor.py  rule_pattern.py  time_extractor.py
