[tool.poetry]
name = "Ayabe"
version = "0.1.0"
description = ""
authors = ["syrinka <skycore@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc2"
nonebot-plugin-gocqhttp = "^0.6.3"
nonebot-plugin-help = "^0.3.1"
nonebot-plugin-report = "^1.1.2"
nb-cli = "^0.6.7"

[tool.poetry.dev-dependencies]

[tool.nonebot]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_help", "nonebot_plugin_report"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
